--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="vocation">Web Application Developer</div>
     <div class="skills"> HTML / CSS/ JavaScript / React.js / Redux/ Python / Django / Express.js / AWS(Basics) / Docker(Basics) </div>
     <p>
-        An SPA That displays subreddit data from Reddit for a spcified time period. As the front-end developer, I worked
+         As the front-end developer, I worked 
     </p>
     <div class="email">Bolterandbow@gmail.com</div>
     <div class="icons">
