--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <div class="vocation">Web Application Developer</div>
     <div class="skills"> HTML / CSS/ JavaScript / React.js / Redux/ Python / Django / Express.js / AWS(Basics) / Docker(Basics) </div>
     <p>
-         As the front-end developer, I worked 
+         Full-Stack Web Developer certified from TECH I.S.
     </p>
     <div class="email">Bolterandbow@gmail.com</div>
     <div class="icons">
@@ -77,7 +77,7 @@
               Django API.</p>
               <p class="card-text"><small class="text-muted">
                   Test Login Account <br>
-                  Email : test@gmail.com <br>
+                  Email : session@session.com <br>
                   Password : 1234
               </small></p>
               <a href="https://money-count-frontend.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
@@ -107,7 +107,7 @@
               </p>
               <p class="card-text"><small class="text-muted">
                   Test Login Account <br>
-                  Email : test@gmail.com <br>
+                  Email : session@session.com <br>
                   Password : 1234
                 </small></p>
               <a href="https://frontend-srp.herokuapp.com/" target="_blank" class="btn btn-secondary">Website Link</a>
